# team-everest-ocr

./: .gitignore  .processed_records.json  AGENTS.md  alembic.ini  benchmark.py  check_labels.py  context.md  email.txt  form_schema.ts  migration_add_photograph_notes.sql  migration_v2_unified_strings.sql  migration_v3_ambiguous_fields.sql  migration_v4_relationship_details.sql  migration_v5_add_missing_columns.sql  migration_v6_fix_jsonb_to_text.sql  migration_v7_drop_unused_columns.sql  nextplan.md  package-lock.json  pyproject.toml  pyrightconfig.json  read_db.py  schema.sql  test_report.py  test_zoho_post.py  test_zoho_scope.py
.opencode/: mcp.json  package-lock.json
alembic/: env.py
docs/: context.md  data.md  git.txt  plan.md  plan1.md  plan2.md  plan3.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
graphify-out/: .graphify_labels.json  .graphify_labels.json.sig  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scratch/: check_asset.py  crop_detail.py  debug_schema.py  run_test.py
scripts/: generate_schema.py  generate_schema.ts  test_payload.py
src/: __init__.py  backends.py  chandra_client.py  checkbox_coords.json  checkbox_vision.py  config.py  database.py  datalab_client.py  datalab_schema.py  extraction_pipeline.py  form_schema.py  input_handler.py  markdown_parser.py  model_client.py  models.py  page_classifier.py  pipeline_runner.py  pipeline_runner.py.bak  preprocessing.py  prompt_templates.py  ratelimit.py  renderers.py  schemas.py  sections.py  server.py  status.py  tesseract.py  (+1 more)
(+1365 files in other folders)
