[project]
name = "ocr-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.21.0",
    "sentencepiece",
    "pymupdf>=1.23.0",
    "opencv-python>=4.8.0",
    "pillow>=9.0.0",
    "numpy>=1.24.0",
    "tqdm",
    "google-generativeai>=0.8.0",
    "bitsandbytes>=0.49.2",
    "accelerate>=1.14.0",
    "einops>=0.8.2",
    "timm>=1.0.27",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.0.0",
    "pytesseract>=0.3.13",
    "openai>=2.43.0",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.2",
]



[tool.uv]
package = false
